belajar events dengan addEventListener dan eventHendler

--- a/DOM Javascript/index.html
+++ b/DOM Javascript/index.html
@@ -45,7 +45,7 @@
         </section>
     </div>
 
-    <script src="script2.js"></script>
+    <script src="events.js"></script>
 </body>
 
 </html>
